<resources>
    <string name="app_name">Bird ID</string>

    <string name="btn_fillscreen">New Bird ID</string>
    <string name="btn_create_db">Create Database</string>
    <string name="btn_bird_list">View Database</string>
    <string name="action_settings">Settings</string>

    <string name="bird_list_title">Bird Database</string>
    <string name="home_title">Bird ID Home</string>
    <string name="fill_tool_title">Fill the Template</string>
    <string name="beak_choice_title">Beak Type</string>
    <string name="body_choice_title">Body Type</string>

    <string name="btn_clr_black">Black</string>
    <string name="btn_clr_grey">Grey</string>
    <string name="btn_clr_white">White</string>
    <string name="btn_clr_brown">Brown</string>
    <string name="btn_clr_red">Red</string>
    <string name="btn_clr_yellow">Yellow</string>
    <string name="btn_clr_blue">Blue</string>
    <string name="btn_clr_orange">Orange</string>
    <string name="btn_clr_green">Green</string>
    <string name="title_activity_bird_list">ScrollingActivity</string>
    <string name="tick_next" />
    <string name="fill_image_description">Template image to be filled.</string>
    <string name="pointed_beak_button_description">Pointed beak button</string>
    <string name="wide_beak_button_description">Wide beak button</string>
    <string name="rail_body_button_description">Rail body type button</string>
    <string name="songbird_body_button_description">Small songbird body type button</string>

    <string name="bird_entry_name">temp name</string>
    <string name="bird_entry_latin_name">temp latin name</string>
    <string name="bird_entry_irish_name">temp irish name</string>
    <string name="bird_entry_description">temp description</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="icon_search">Search</string>
    <string name="button_home">Go Back Home</string>
</resources>