<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="kellehj1.FYP.birdID.MainMenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bird_logo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="@string/home_title"
        android:textColor="@color/ming"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_fillscreen"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:layout_marginTop="64dp"
        android:onClick="newBirdID"
        android:text="@string/btn_fillscreen"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:onClick="viewBirdList"
        android:text="@string/btn_bird_list"
        android:textAllCaps="false"
        android:textColor="@color/ming"
        android:textSize="18sp"
        app:backgroundTint="@color/timberwolf"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconTint="@color/ming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fillscreen" />

</androidx.constraintlayout.widget.ConstraintLayout>